tests/NormalTests/paczka1/fuzzy1/58431070.err
Error in line 4: wmhynAOTwsS S805 61,0
Error in line 8: wmhynAOTwsS S263 99,8
Error in line 20: mQHdT S805 10,3
Error in line 21: mQHdT S263 76,2
